lab1/Test/L1-A-11-24.output
Error Type B at Line 4
Error Type B at Line 9
Error Type B at Line 20
Error Type B at Line 21
Error Type B at Line 22
Error Type B at Line 24
Error Type B at Line 33
