lab1/Test/L1-A-11-24.cmm
int DcdHrY8HSphkehgw , Woqp3kI7VNncZzrpKx 


struct {
  int ip5j0N8NGEmC ;
  int Xq ;
};
int VWsqdHqWeXm9URjRSrgd ( ) {
  float P9Fk6ciCwv2A9pc4 [ 214876176 ] aILMfBvt5F5gVkP8H7 
    = vsPxgxQ1KDH5Q = CAiX3Sq5u_54lK <= jhOm - EdwG9My 
    * Y_ ( kpb_lmm06J4yBWSUt || EDcz3fsv03I26Rd7QgiZ >= 
    x06KxDR0Zt + LKCRjiRobPr6 [ lmAqPiZ5VzfM || tkZpqT 
    != QtjK_s4hFcFsg7MEeeA ( FCz6 , WHiGZ_Topi = iA0Z 
    && ionGhCQfhVZbCKl0ZN == ( MFJ_CpRFuT5MG6 < l5CXNsmrn2pA1 
    * 606674180.1275328772 ) . ez3PiR3ZDh8 > OQ3eL1vbpwTNULKDMad 
    ) . KOfXrjIlxG07JAxF03 . JJfnPwRl08_Ft . ycKWPT6 ] 
    ) / - ! zGbLTZNszeM ( ) && ! 1625533126 ;
}
int Md_ ( ) {
  AJJaIIPl8_gJEEd2p ;+ 
  if - ( zBx7M )   UFdTKkKyHtv70L3al ;
else   if ( CIoD98zN )   if gYOmio )   if ( l )   dFE186mGchZh30eEt 
    ;
else   while ( WpkILmjM7z2 )   return ;


else   if ( ANgFt4 ) {
  }



}
int ;== 
struct _be1u2V06ftPANq {
  struct X1s_H2VjjZm gkC1jlqGspr2Vu ;
  int jGf8aHzTb ;
}dzg8hJJn 
;
int ;
int ;
struct Bo ;
struct q2uUWn QBz ( struct pWAl9Ap7uqV SqHQPbY_jnlupNx 
  ) {
  UXBST ;
}
int US_we ( ) {
}
int ;
int FSxXqyg ( int TW6BySCPMvAf2yy67BS , int y ) {
}
